Moved build-package.bat into build.gradle (needs testing)